# tagato

./: LICENSE  README.rst  pyproject.toml
docs/: usage.rst
src/tagato/: __init__.py  formfields.py  formfields.pyi  tags.py  tags.pyi
tests/: test_formfields.py  test_tags.py
