[project]
name = "tagato"
version = "0.1.0"
description = "A lightweight Python library for generating HTML using a nested, declarative syntax."
readme = "README.rst"
authors = [
    { name = "Hidayat Trimarsanto", email = "trimarsanto@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "markupsafe>=2.1",
]
license = "MIT"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

# EOF
